--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,13 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Manga App</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="first_fragment_label">Top Manga App</string>
+    <string name="second_fragment_label">Details</string>
+    <string name="next">Suivant</string>
+    <string name="previous">Retour</string>
+    <string name="imageManga">imgManga</string>
+    <string name="infos">Informations</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
